--- a/adm/templates/adm/cadastrar_usuario.html
+++ b/adm/templates/adm/cadastrar_usuario.html
@@ -6,7 +6,7 @@
     <form method="post">
         {% csrf_token %}
         <div class="mb-3">
-            <label for="username" class="form-label">Usuário</label>
+            <label for="username" class="form-label">Nome</label>
             <input type="text" class="form-control" id="username" name="username" required>
         </div>
         <div class="mb-3">
